--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
@@ -101,177 +101,21 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
-        <ScrollView
+
+        <LinearLayout
+            android:id="@+id/layout_content_card_info"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"> <!--100 270-->
-
-            <LinearLayout
-                android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:orientation="vertical"><!--100 270-->
+            <View
+                android:id="@+id/view_above_card_info"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <View
-                    android:background="@null"
-                    android:layout_width="match_parent"
-                    android:layout_height="270dp"/>
+                android:layout_height="100dp"
+                android:background="@null" />
 
-                <LinearLayout
-                    android:background="@drawable/card_info_bg"
-                    android:layout_width="match_parent"
-                    android:layout_height="350dp"
-                    android:layout_margin="20dp"
-                    android:paddingStart="40dp"
-                    android:paddingEnd="40dp"
-                    android:paddingTop="50dp"
-                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:orientation="horizontal">
+        </LinearLayout>
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="积分"
-                            android:textStyle="bold"
-                            android:textSize="18sp"/>
-
-                        <TextView
-                            android:id="@+id/textView_points_card_info"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="end"
-                            android:text="0"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="20dp"
-                        android:background="#E4DDDDDD"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="可兑通用点"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
-
-                        <TextView
-                            android:id="@+id/textView_exchange_points_card_info"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="end"
-                            android:text="0"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="20dp"
-                        android:background="#E4DDDDDD"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="会员卡"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
-
-                        <TextView
-                            android:id="@+id/textView_account_card_info"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="2"
-                            android:gravity="end"
-                            android:text="0000-0000-0000"
-                            android:textStyle="bold"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="20dp"
-                        android:background="#E4DDDDDD"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="使用规则"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="end"
-                            android:text=">"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginBottom="20dp"
-                        android:background="#E4DDDDDD"/>
-
-                    <android.support.v7.widget.CardView
-                        android:layout_gravity="center_horizontal"
-                        app:cardBackgroundColor="#FF8225"
-                        android:layout_marginTop="15dp"
-                        android:layout_width="140dp"
-                        android:layout_height="34dp"
-                        app:cardCornerRadius="17dp"
-                        app:cardElevation="3dp"
-                        app:cardPreventCornerOverlap="false">
-                        <Button
-                            android:id="@+id/button_unbind_card_info"
-                            android:background="@null"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="解除绑定"
-                            android:textSize="16sp"
-                            android:textColor="@color/colorWhite"/>
-                    </android.support.v7.widget.CardView>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
 
     </RelativeLayout>
 
